added stashed files
